[package]
name = "triangle"
version = "0.1.0"
authors = ["Joseph C. Osborn <joseph.osborn@pomona.edu>"]
edition = "2021"

[dependencies]
# Our graphics API
wgpu = "0.17"
# Opening windows in a cross-platform way
winit = "0.28"
# Organized logging output, WGPU uses this for errors and info
log = "0.4"
env_logger = "0.10"
# Pollster is a very simple async runtime. We can't ignore async since we want to be web-compatible.
pollster = "0.3.0"
image = "0.24.7"


[profile.dev.package.backtrace]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.adler]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3